--- a/contact-us.html
+++ b/contact-us.html
@@ -15,8 +15,8 @@
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.4.8/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -66,7 +66,7 @@
         </div>
     </div>
 
-    <div class="cu-sec2">
+    <div class="cu-sec2 animate__animated animate__backInUp">
         <div class="contact-form">
             <div class="first-container">
                 <div class="info-container">
@@ -110,7 +110,7 @@
         </div>
     </div>
 
-    <div class="cu-map">
+    <div class="cu-map" data-aos="fade-up">
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3505.8877519053694!2d77.18421131494581!3d28.513024696230907!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d1e1bb7af3711%3A0x5bba1a9e01477cb7!2sQutub%20Minar%20Metro%20Station!5e0!3m2!1sen!2sin!4v1632333024094!5m2!1sen!2sin"
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
@@ -118,7 +118,7 @@
 
 
     <!------------------------------ footer ---------------------------->
-    <footer>
+    <footer data-aos="fade-up">
         <div class="footer-inner">
             <div class="footer-box">
                 <img src="./img/logo/1.jpeg" alt="">
