--- a/our-team.html
+++ b/our-team.html
@@ -15,8 +15,8 @@
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/6.4.8/swiper-bundle.min.css" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 
 <body>
@@ -66,7 +66,7 @@
         </div>
     </div>
 
-    <div class="te-sec2">
+    <div class="te-sec2 animate__animated animate__backInUp">
         <div class="te-left">
             <img src="img/team-page/shashank-sir.jpeg" alt="">
         </div>
@@ -89,7 +89,7 @@
         </div>
     </div>
 
-    <div class="te-sec2">
+    <div class="te-sec2" data-aos="fade-up">
         <div class="te-left">
             <img src="img/team-page/female.png" alt="">
         </div>
@@ -108,7 +108,7 @@
         </div>
     </div>
 
-    <div class="te-sec2">
+    <div class="te-sec2" data-aos="fade-up">
         <div class="te-left">
             <img src="img/team-page/male.png" alt="">
         </div>
@@ -129,7 +129,7 @@
         </div>
     </div>
 
-    <div class="te-sec2">
+    <div class="te-sec2" data-aos="fade-up">
         <div class="te-left">
             <img src="img/team-page/sp-singh-chawla.jpeg" alt="">
         </div>
@@ -151,7 +151,7 @@
         </div>
     </div>
 
-    <div class="te-sec2">
+    <div class="te-sec2" data-aos="fade-up">
         <div class="te-left">
             <img src="img/team-page/sanchit-mathur.jpeg" alt="">
         </div>
@@ -172,7 +172,7 @@
         </div>
     </div>
 
-    <div class="te-sec2">
+    <div class="te-sec2" data-aos="fade-up">
         <div class="te-left">
             <img src="img/team-page/male.png" alt="">
         </div>
@@ -196,7 +196,7 @@
     </div>
 
     <!------------------------------ footer ---------------------------->
-    <footer>
+    <footer data-aos="fade-up">
         <div class="footer-inner">
             <div class="footer-box">
                 <img src="./img/logo/logo.png" alt="">
