--- a/our-services.html
+++ b/our-services.html
@@ -70,7 +70,7 @@
     <footer>
         <div class="footer-inner">
             <div class="footer-box">
-                <img src="./img/logo/1.jpeg" alt="">
+                <img src="./img/logo/logo.png" alt="">
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Alias ratione laudantium, tempora omnis
                     veniam dicta quia quidem dolorum illo</p>
             </div>
