--- a/contact-us.html
+++ b/contact-us.html
@@ -118,7 +118,7 @@
 
 
     <!------------------------------ footer ---------------------------->
-    <footer data-aos="fade-up">
+    <footer>
         <div class="footer-inner">
             <div class="footer-box">
                 <img src="./img/logo/logo.png" alt="">
