--- a/about-us.html
+++ b/about-us.html
@@ -132,7 +132,7 @@
     </div>
 
     <!------------------------------ footer ---------------------------->
-    <footer data-aos="fade-up">
+    <footer>
         <div class="footer-inner">
             <div class="footer-box">
                 <img src="./img/logo/logo.png" alt="">
