--- a/contact-us.html
+++ b/contact-us.html
@@ -112,7 +112,7 @@
 
     <div class="cu-map" data-aos="fade-up">
         <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3505.8877519053694!2d77.18421131494581!3d28.513024696230907!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d1e1bb7af3711%3A0x5bba1a9e01477cb7!2sQutub%20Minar%20Metro%20Station!5e0!3m2!1sen!2sin!4v1632333024094!5m2!1sen!2sin"
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3504.2124473043955!2d77.18751251508108!3d28.563382582445126!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390d1daf8b1c2cf9%3A0xa5b7bd8dbe6550dd!2sLiteagle%20LLP!5e0!3m2!1sen!2sin!4v1632579179385!5m2!1sen!2sin"
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
     </div>
 
@@ -134,7 +134,8 @@
             </div>
             <div class="footer-box">
                 <h2>Reach Us</h2>
-                <a href="" class="footer-link">Liteagle LLP, B2/88, Safdarjung Enclave, New Delhi-110029.</a>
+                <a href="https://g.page/r/Cd1QZb6NvbelEA0" target="_blank" class="footer-link">Liteagle LLP, B2/88,
+                    Safdarjung Enclave, New Delhi-110029.</a>
                 <a href="tel:+91-7503576834" class="footer-link">M No. +91-7503576834</a>
                 <a href="mailto:info@liteagle.com" class="footer-link">E-mail id- info@liteagle.com</a>
                 <div class="sec1-social">
