--- a/our-services.html
+++ b/our-services.html
@@ -280,7 +280,8 @@
             </div>
             <div class="footer-box">
                 <h2>Reach Us</h2>
-                <a href="" class="footer-link">Liteagle LLP, B2/88, Safdarjung Enclave, New Delhi-110029.</a>
+                <a href="https://g.page/r/Cd1QZb6NvbelEA0" target="_blank" class="footer-link">Liteagle LLP, B2/88,
+                    Safdarjung Enclave, New Delhi-110029.</a>
                 <a href="tel:+91-7503576834" class="footer-link">M No. +91-7503576834</a>
                 <a href="mailto:info@liteagle.com" class="footer-link">E-mail id- info@liteagle.com</a>
                 <div class="sec1-social">
