--- a/our-team.html
+++ b/our-team.html
@@ -83,7 +83,8 @@
                 Maharashtra and Uttar Pradesh etc. His forte lies in imparting training, holding seminar and workshop on
                 POSH and Labour Law Compliances.</p>
             <div class="te-right-a">
-                <a href="" target="_blank"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/shashank-singh-687a6153/" target="_blank"><i
+                        class="fab fa-linkedin"></i></a>
                 <a href="" target="_blank"><i class="fas fa-envelope"></i></a>
             </div>
         </div>
@@ -212,7 +213,8 @@
             </div>
             <div class="footer-box">
                 <h2>Reach Us</h2>
-                <a href="" class="footer-link">Liteagle LLP, B2/88, Safdarjung Enclave, New Delhi-110029.</a>
+                <a href="https://g.page/r/Cd1QZb6NvbelEA0" target="_blank" class="footer-link">Liteagle LLP, B2/88,
+                    Safdarjung Enclave, New Delhi-110029.</a>
                 <a href="tel:+91-7503576834" class="footer-link">M No. +91-7503576834</a>
                 <a href="mailto:info@liteagle.com" class="footer-link">E-mail id- info@liteagle.com</a>
                 <div class="sec1-social">
