--- a/our-team.html
+++ b/our-team.html
@@ -85,7 +85,7 @@
             <div class="te-right-a">
                 <a href="https://www.linkedin.com/in/shashank-singh-687a6153/" target="_blank"><i
                         class="fab fa-linkedin"></i></a>
-                <a href="" target="_blank"><i class="fas fa-envelope"></i></a>
+                <a href="mailto:Shashank@liteagle.com" target="_blank"><i class="fas fa-envelope"></i></a>
             </div>
         </div>
     </div>
@@ -104,7 +104,7 @@
                 queries related to the corporate laws and Compliances.</p>
             <div class="te-right-a">
                 <a href="" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="" target="_blank"><i class="fas fa-envelope"></i></a>
+                <a href="mailto:" target="_blank"><i class="fas fa-envelope"></i></a>
             </div>
         </div>
     </div>
@@ -125,7 +125,7 @@
                 related issues.</p>
             <div class="te-right-a">
                 <a href="" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="" target="_blank"><i class="fas fa-envelope"></i></a>
+                <a href="mailto:" target="_blank"><i class="fas fa-envelope"></i></a>
             </div>
         </div>
     </div>
@@ -147,7 +147,7 @@
                 arenas of topics.</p>
             <div class="te-right-a">
                 <a href="" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="" target="_blank"><i class="fas fa-envelope"></i></a>
+                <a href="mailto:" target="_blank"><i class="fas fa-envelope"></i></a>
             </div>
         </div>
     </div>
@@ -168,14 +168,14 @@
                 Governance Systems, FEMA, Banking Companies and various other corporate compliances.</p>
             <div class="te-right-a">
                 <a href="" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="" target="_blank"><i class="fas fa-envelope"></i></a>
+                <a href="mailto:" target="_blank"><i class="fas fa-envelope"></i></a>
             </div>
         </div>
     </div>
 
     <div class="te-sec2" data-aos="fade-up">
         <div class="te-left">
-            <img src="img/team-page/male.png" alt="">
+            <img src="img/team-page/vivek-sir.jpeg" alt="">
         </div>
         <div class="te-right">
             <h1>Vivek Singh</h1>
@@ -190,8 +190,9 @@
                 Maharashtra and Uttar Pradesh etc. His forte lies in imparting training, holding seminar and workshop on
                 POSH and Labour Law Compliances.</p>
             <div class="te-right-a">
-                <a href="" target="_blank"><i class="fab fa-linkedin"></i></a>
-                <a href="" target="_blank"><i class="fas fa-envelope"></i></a>
+                <a href="https://www.linkedin.com/in/vivek-singh-aa28b765" target="_blank"><i
+                        class="fab fa-linkedin"></i></a>
+                <a href="mailto:vseth582@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
             </div>
         </div>
     </div>
