--- a/our-team.html
+++ b/our-team.html
@@ -102,10 +102,10 @@
                 contracts and other legal documents. She has been involved in assisting and guiding new companies and
                 foreign clients in establishing their existence and setting up in India and advising them on day to day
                 queries related to the corporate laws and Compliances.</p>
-            <div class="te-right-a">
+            <!-- <div class="te-right-a">
                 <a href="" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a href="mailto:" target="_blank"><i class="fas fa-envelope"></i></a>
-            </div>
+            </div> -->
         </div>
     </div>
 
@@ -123,10 +123,10 @@
                 plant. He advises clients on disciplinary process and represented them before various firms like High
                 Court and various Tribunals and authorities. He conducted various seminars and workshops on IR and HR
                 related issues.</p>
-            <div class="te-right-a">
+            <!-- <div class="te-right-a">
                 <a href="" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a href="mailto:" target="_blank"><i class="fas fa-envelope"></i></a>
-            </div>
+            </div> -->
         </div>
     </div>
 
@@ -145,10 +145,10 @@
                 matters and restoration along with advisory on corporate law matters, transactional matters and other
                 matters related to civil litigation. He has taken various sessions at ICSI and ICAI (CWA) on different
                 arenas of topics.</p>
-            <div class="te-right-a">
+            <!-- <div class="te-right-a">
                 <a href="" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a href="mailto:" target="_blank"><i class="fas fa-envelope"></i></a>
-            </div>
+            </div> -->
         </div>
     </div>
 
@@ -166,10 +166,10 @@
                 and love for his work resonates with his peers. Sanchit is having an extensive experience in Secretarial
                 Audits, Financial and Management, Capital Reconciliation, Share Transfer Audits, Audit of Corporate
                 Governance Systems, FEMA, Banking Companies and various other corporate compliances.</p>
-            <div class="te-right-a">
+            <!-- <div class="te-right-a">
                 <a href="" target="_blank"><i class="fab fa-linkedin"></i></a>
                 <a href="mailto:" target="_blank"><i class="fas fa-envelope"></i></a>
-            </div>
+            </div> -->
         </div>
     </div>
 
@@ -189,11 +189,11 @@
                 handling various clients in respect of litigation and compliances in Delhi NCR, Haryana, Punjab,
                 Maharashtra and Uttar Pradesh etc. His forte lies in imparting training, holding seminar and workshop on
                 POSH and Labour Law Compliances.</p>
-            <div class="te-right-a">
+            <!-- <div class="te-right-a">
                 <a href="https://www.linkedin.com/in/vivek-singh-aa28b765" target="_blank"><i
                         class="fab fa-linkedin"></i></a>
                 <a href="mailto:vseth582@gmail.com" target="_blank"><i class="fas fa-envelope"></i></a>
-            </div>
+            </div> -->
         </div>
     </div>
 
